# OPALX

./: .gitattributes  .gitignore  AdaptBins.cpp  AdaptBins.h  AdaptBins.hpp  AdaptBins.tpp  BinHisto.cpp  BinHisto.h  BinHisto.hpp  BinHisto.tpp  BinningTools.h  Binning_pic3d.cpp  CMakeLists.txt  Doxyfile  Doxyfile.in  ParallelReduceTools.h  README  README.md  generateAndPublishDoc.sh  grun.sh  grun_timings.sh  run.sh  run_timings.sh  tags
src/: Allocator.h  CMakeLists.txt  Main.cpp  Makefile.am  README  ReadMe  addToDoxygenMainPage.h  autogen-gele.sh  autogen-palu.sh  autogen-regression.sh  autogen-withml.sh  autogen.sh  config.h  config.h.in  configure.ac  opal.cpp  opal.h
src/AbsBeamline/: CMakeLists.txt  Monitor.cpp  Monitor.h
src/AbstractObjects/: Action.cpp  Action.h  Attribute.cpp  Attribute.h  AttributeBase.cpp  AttributeBase.h  AttributeHandler.cpp  AttributeHandler.h  BeamSequence.cpp  BeamSequence.h  CMakeLists.txt  Definition.cpp  Definition.h  Directory.cpp  Directory.h  DoomDB.cpp  DoomDB.h  DoomReader.cpp  DoomReader.h  DoomWriter.cpp  DoomWriter.h  Editor.cpp  Editor.h  Element.cpp  Element.h  Expressions.h  Invalidator.cpp  Invalidator.h  Object.cpp  Object.h  ObjectFunction.h  OpalData.cpp  OpalData.h  PlaceRep.cpp  PlaceRep.h  RangeRep.cpp  RangeRep.h  Table.cpp  Table.h  TableRowRep.cpp  (+3 more)
src/Algebra/: CMakeLists.txt  QRSolver.cpp  QRSolver.h
src/Algorithms/: AutoPhase.cpp  AutoPhase.h  AutophaseTracker.cpp  AutophaseTracker.h  BeamBeam3D.cpp  BeamBeam3D.h  CMakeLists.txt  Ctunes.cc  Ctunes.h  Ctunes.hpp  DistributionMoments.cpp  LieMapper.cpp  LieMapper.h  MPSplitIntegrator.cpp  MPSplitIntegrator.h  NilTracker.h  OpalParticle.h  OrbitThreader.cpp  ParallelCyclotronTracker.cpp  ParallelCyclotronTracker.h  ParallelSliceTracker.cpp  ParallelSliceTracker.h  ParallelTTracker.cpp  ParallelTTracker.h  ParallelTracker.cpp  ParallelTracker.h  StatisticalErrors.h  ThickMapper.cpp  ThickMapper.h  ThickTracker.cpp  ThickTracker.h  TransportMapper.cpp  TransportMapper.h  lomb.cc  lomb.h  lomb.hpp
src/Amr/: BoxLibLayout.hpp
src/Aperture/: Aperture.cpp  Aperture.h  CMakeLists.txt  Split.cpp  Split.h
src/Attributes/: Attributes.cpp  Attributes.h  Bool.cpp  Bool.h  BoolArray.cpp  BoolArray.h  CMakeLists.txt  Place.cpp  Place.h  Range.cpp  Range.h  Real.cpp  Real.h  RealArray.cpp  RealArray.h  Reference.cpp  Reference.h  String.cpp  String.h  StringArray.cpp  StringArray.h  TableRow.cpp  TableRow.h  TokenList.cpp  TokenList.h  TokenListArray.cpp  TokenListArray.h  opalstr.cpp  opalstr.h
src/BasicActions/: CMakeLists.txt  Call.cpp  Call.h  DoomCmd.cpp  DoomCmd.h  Dump.cpp  Dump.h  Echo.cpp  Echo.h  Help.cpp  Help.h  Option.cpp  Option.h  Quit.cpp  Quit.h  Save.cpp  Save.h  Select.cpp  Select.h  Show.cpp  Show.h  Stop.cpp  Stop.h  System.cpp  System.h  Title.cpp  Title.h  Value.cpp  Value.h  What.cpp  What.h
src/Classic/: config.h.in
src/Distribution/: Bins.h  CMakeLists.txt  ClosedOrbitFinder.h  Distribution.cpp  Distribution.h  Gaussian.h  Gaussian.hpp  Harmonics.h  LaserProfile.cpp  LaserProfile.h  MagneticField.h  MapGenerator.h  SigmaGenerator.h  SpecificElementVisitor.h  error.h  halton1d_sequence.cpp  math.h  matrix_vector_operation.h  physical_error.h  physics.h  ranlib.cc  ranlib.h  rdm.h
src/Editor/: CMakeLists.txt  Edit.cpp  Edit.h  EditCmd.cpp  EditCmd.h  EditCycle.cpp  EditCycle.h  EditEnd.cpp  EditEnd.h  EditFlatten.cpp  EditFlatten.h  EditInstall.cpp  EditInstall.h  EditMove.cpp  EditMove.h  EditParser.cpp  EditParser.h  EditReflect.cpp  EditReflect.h  EditRemove.cpp  EditRemove.h  EditReplace.cpp  EditReplace.h  EditSelect.cpp  EditSelect.h
src/Elements/: AttCell.cpp  AttCell.h  CMakeLists.txt  OpalBeamBeam.cpp  OpalBeamBeam.h  OpalBeamBeam3D.cpp  OpalBeamBeam3D.h  OpalBeamStripping.cpp  OpalBeamStripping.h  OpalBeamline.cpp  OpalBeamline.h  OpalBend.cpp  OpalBend.h  OpalCCollimator.cpp  OpalCCollimator.h  OpalCavity.cpp  OpalCavity.h  OpalCyclotron.cpp  OpalCyclotron.h  OpalCyclotronValley.cpp  OpalCyclotronValley.h  OpalDegrader.cpp  OpalDegrader.h  OpalDrift.cpp  OpalDrift.h  OpalECollimator.cpp  OpalECollimator.h  OpalElement.cpp  OpalElement.h  OpalHKicker.cpp  OpalHKicker.h  OpalHMonitor.cpp  OpalHMonitor.h  OpalInstrument.cpp  OpalInstrument.h  OpalKicker.cpp  OpalKicker.h  OpalMarker.cpp  OpalMarker.h  OpalMonitor.cpp  (+55 more)
src/Errors/: AlignBase.h  AlignHandler.cpp  AlignHandler.h  AlignReader.cpp  AlignReader.h  AlignRemover.cpp  AlignRemover.h  AlignWriter.cpp  AlignWriter.h  CMakeLists.txt  Error.cpp  Error.h  ErrorAlign.cpp  ErrorAlign.h  ErrorCmd.cpp  ErrorCmd.h  ErrorComp.cpp  ErrorComp.h  ErrorEnd.cpp  ErrorEnd.h  ErrorField.cpp  ErrorField.h  ErrorParser.cpp  ErrorParser.h  ErrorPrint.cpp  ErrorPrint.h  ErrorSave.cpp  ErrorSave.h  ErrorSelect.cpp  ErrorSelect.h  MPBase.cpp  MPBase.h  MPHandler.cpp  MPHandler.h  MPReader.cpp  MPReader.h  MPRemover.cpp  MPRemover.h  MPWriter.cpp  MPWriter.h
src/Expressions/: AAutomatic.h  ABinary.h  AColumn.cpp  AColumn.h  ADeferred.h  AList.h  ARefAttr.h  ARefExpr.h  ARow.cpp  ARow.h  ASUnary.h  ATable.cpp  ATable.h  AUnary.h  AValue.h  CMakeLists.txt  Expressions.cpp  Indexer.h  SAutomatic.h  SBinary.h  SCell.cpp  SCell.h  SConstant.h  SDeferred.h  SFunction.cpp  SFunction.h  SHash.cpp  SHash.h  SNull.h  SRefAttr.h  SRefExpr.h  SUnary.h  SValue.h  TFind.h  TFunction0.h  TFunction1.h  TFunction2.h
src/Lines/: CMakeLists.txt  FlatWriter.cpp  FlatWriter.h  Line.cpp  Line.h  LineTemplate.cpp  LineTemplate.h  LineWriter.cpp  LineWriter.h  Replacer.cpp  Replacer.h  Sequence.cpp  Sequence.h  SequenceMember.cpp  SequenceMember.h  SequenceParser.cpp  SequenceParser.h  SequenceTemplate.cpp  SequenceTemplate.h
src/Match/: AbstractFun.cpp  AbstractFun.h  AbstractVar.cpp  AbstractVar.h  CMakeLists.txt  ConcreteFun.cpp  ConcreteFun.h  ConcreteVar.cpp  ConcreteVar.h  ConstraintCmd.cpp  ConstraintCmd.h  LMDif.cpp  LMDif.h  Match.cpp  Match.h  MatchCmd.cpp  MatchCmd.h  MatchEnd.cpp  MatchEnd.h  MatchLimits.h  MatchOption.cpp  MatchOption.h  MatchParser.cpp  MatchParser.h  MatchState.h  Migrad.cpp  Migrad.h  (+4 more)
(+2696 files in other folders)
