AUTOMAKE_OPTIONS = foreign dist-bzip2
EXTRA_DIST = saved_svn_version.txt
bin_PROGRAMS = opal
opal_SOURCES = AbstractObjects/Action.cpp\
    AbstractObjects/Attribute.cpp\
    AbstractObjects/AttributeBase.cpp\
    AbstractObjects/AttributeHandler.cpp\
    AbstractObjects/BeamSequence.cpp\
    AbstractObjects/Definition.cpp\
    AbstractObjects/Directory.cpp\
    AbstractObjects/Editor.cpp\
    AbstractObjects/Element.cpp\
    AbstractObjects/Invalidator.cpp\
    AbstractObjects/OpalData.cpp\
    AbstractObjects/Object.cpp\
    AbstractObjects/ObjectFunction.cpp\
    AbstractObjects/PlaceRep.cpp\
    AbstractObjects/RangeRep.cpp\
    AbstractObjects/Table.cpp\
    AbstractObjects/TableRowRep.cpp\
    AbstractObjects/ValueDefinition.cpp\
    Algebra/QRSolver.cpp\
    Algorithms/BeamBeam3D.cpp\
    Algorithms/LieMapper.cpp\
    Algorithms/MPSplitIntegrator.cpp\
    Algorithms/ThickMapper.cpp\
    Algorithms/ThickTracker.cpp\
    Algorithms/ParallelTTracker.cpp\
    Algorithms/ParallelCyclotronTracker.cpp\
    Algorithms/ParallelSliceTracker.cpp\
    Algorithms/TransportMapper.cpp\
	Algorithms/bet/EnvelopeSlice.cpp\
	Algorithms/bet/EnvelopeBunch.cpp\
	Algorithms/bet/profile.cpp\
	Algorithms/bet/math/sort.cpp\
	Algorithms/bet/math/integrate.cpp\
	Algorithms/bet/math/interpol.cpp\
	Algorithms/bet/math/rk.cpp\
	Algorithms/bet/math/functions.cpp\
	Algorithms/bet/math/linfit.cpp\
	Algorithms/bet/math/root.cpp\
	Algorithms/bet/math/savgol.cpp\
	Algorithms/bet/math/svdfit.cpp\
	Algorithms/bet/BetError.cpp\
    Aperture/Split.cpp\
    Aperture/Aperture.cpp\
    Attributes/Attributes.cpp\
    Attributes/Bool.cpp\
    Attributes/BoolArray.cpp\
    Attributes/Place.cpp\
    Attributes/Range.cpp\
    Attributes/Real.cpp\
    Attributes/RealArray.cpp\
    Attributes/Reference.cpp\
    Attributes/opalstr.cpp\
    Attributes/StringArray.cpp\
    Attributes/TableRow.cpp\
    Attributes/TokenList.cpp\
    Attributes/TokenListArray.cpp\
    BasicActions/Call.cpp\
    BasicActions/Dump.cpp\
    BasicActions/Echo.cpp\
    BasicActions/Help.cpp\
    BasicActions/Option.cpp\
    BasicActions/Save.cpp\
    BasicActions/Select.cpp\
    BasicActions/Show.cpp\
    BasicActions/Stop.cpp\
    BasicActions/Quit.cpp\
    BasicActions/System.cpp\
    BasicActions/Title.cpp\
    BasicActions/Value.cpp\
    BasicActions/What.cpp\
    OpalConfigure/Configure.cpp\
    Distribution/Distribution.cpp\
    Distribution/ranlib.cc\
    Distribution/halton1d_sequence.cpp\
    Distribution/LaserProfile.cpp\
    Editor/Edit.cpp\
    Editor/EditCmd.cpp\
    Editor/EditCycle.cpp\
    Editor/EditEnd.cpp\
    Editor/EditFlatten.cpp\
    Editor/EditInstall.cpp\
    Editor/EditMove.cpp\
    Editor/EditParser.cpp\
    Editor/EditReflect.cpp\
    Editor/EditRemove.cpp\
    Editor/EditReplace.cpp\
    Editor/EditSelect.cpp\
    Elements/AttCell.cpp\
    Elements/OpalBeamBeam.cpp\
    Elements/OpalBeamBeam3D.cpp\
    Elements/OpalBend.cpp\
    Elements/OpalCavity.cpp\
    Elements/OpalTravelingWave.cpp\
    Elements/OpalCCollimator.cpp\
    Elements/OpalCyclotron.cpp\
    Elements/OpalDrift.cpp\
    Elements/OpalECollimator.cpp\
    Elements/OpalElement.cpp\
    Elements/OpalHKicker.cpp\
    Elements/OpalHMonitor.cpp\
    Elements/OpalInstrument.cpp\
    Elements/OpalKicker.cpp\
    Elements/OpalMarker.cpp\
    Elements/OpalMonitor.cpp\
    Elements/OpalMultipole.cpp\
    Elements/OpalOctupole.cpp\
    Elements/OpalPatch.cpp\
    Elements/OpalProbe.cpp\
    Elements/OpalPepperPot.cpp\
    Elements/OpalQuadrupole.cpp\
    Elements/OpalRBend.cpp\
    Elements/OpalRCollimator.cpp\
    Elements/OpalSBend.cpp\
    Elements/OpalSeparator.cpp\
    Elements/OpalSeptum.cpp\
    Elements/OpalSextupole.cpp\
    Elements/OpalSlit.cpp\
    Elements/OpalSolenoid.cpp\
    Elements/OpalSRot.cpp\
    Elements/OpalVKicker.cpp\
    Elements/OpalVMonitor.cpp\
    Elements/OpalWire.cpp\
    Elements/OpalYRot.cpp\
    Elements/OpalBeamline.cpp\
    Elements/OpalCyclotronValley.cpp\
    Elements/OpalParallelPlate.cpp\
    Elements/OpalStripper.cpp\
    Errors/AlignBase.cpp\
    Errors/AlignHandler.cpp\
    Errors/AlignReader.cpp\
    Errors/AlignRemover.cpp\
    Errors/AlignWriter.cpp\
    Errors/Error.cpp\
    Errors/ErrorAlign.cpp\
    Errors/ErrorCmd.cpp\
    Errors/ErrorComp.cpp\
    Errors/ErrorEnd.cpp\
    Errors/ErrorField.cpp\
    Errors/ErrorParser.cpp\
    Errors/ErrorPrint.cpp\
    Errors/ErrorSave.cpp\
    Errors/ErrorSelect.cpp\
    Errors/MPBase.cpp\
    Errors/MPHandler.cpp\
    Errors/MPReader.cpp\
    Errors/MPRemover.cpp\
    Errors/MPWriter.cpp\
    Expressions/AColumn.cpp\
    Expressions/ARow.cpp\
    Expressions/ATable.cpp\
    Expressions/Expressions.cpp\
    Expressions/SCell.cpp\
    Expressions/SFunction.cpp\
    Expressions/SHash.cpp\
    Lines/FlatWriter.cpp\
    Lines/Line.cpp\
    Lines/LineTemplate.cpp\
    Lines/Replacer.cpp\
    Lines/Sequence.cpp\
    Lines/SequenceMember.cpp\
    Lines/SequenceParser.cpp\
    Lines/SequenceTemplate.cpp\
    OpalParser/CompoundStatement.cpp\
    OpalParser/IfStatement.cpp\
    OpalParser/Macro.cpp\
    OpalParser/MacroCmd.cpp\
    OpalParser/MacroStream.cpp\
    OpalParser/OpalParser.cpp\
    OpalParser/WhileStatement.cpp\
    Match/AbstractFun.cpp\
    Match/AbstractVar.cpp\
    Match/ConcreteFun.cpp\
    Match/ConcreteVar.cpp\
    Match/ConstraintCmd.cpp\
    Match/LMDif.cpp\
    Match/Match.cpp\
    Match/MatchCmd.cpp\
    Match/MatchEnd.cpp\
    Match/MatchOption.cpp\
    Match/MatchParser.cpp\
    Match/Migrad.cpp\
    Match/Simplex.cpp\
    Match/VaryCmd.cpp\
    PhysicsActions/Dynamic.cpp\
    PhysicsActions/MakeSequence.cpp\
    PhysicsActions/SetIntegrator.cpp\
    PhysicsActions/Static.cpp\
    Solvers/FFTPoissonSolver.cpp\
    Solvers/FFTBoxPoissonSolver.cpp\
    Solvers/MGPoissonSolver.cpp\
    Solvers/RectangularDomain.cpp\
    Solvers/EllipticDomain.cpp\
    Solvers/TaperDomain.cpp\
    Structure/Beam.cpp\
    Structure/OpalWake.cpp\
    Structure/SurfacePhysics.cpp\
    Structure/PriEmissionPhysics.cpp\
    Structure/BoundaryGeometry.cpp\
    Structure/SecondaryEmissionPhysics.cpp\
    Structure/FieldSolver.cpp\
    Structure/DataSink.cpp\
    Structure/LossDataSink.cpp\
    Tables/AttList.cpp\
    Tables/AttWriter.cpp\
    Tables/CorrectionBase.cpp\
    Tables/Eigen.cpp\
    Tables/Envelope.cpp\
    Tables/Insertion.cpp\
    Tables/List.cpp\
    Tables/MatrixCmd.cpp\
    Tables/Micado.cpp\
    Tables/Period.cpp\
    Tables/RangeSelector.cpp\
    Tables/Selector.cpp\
    Tables/Survey.cpp\
    Tables/TableTester.cpp\
    Tables/ThreadAll.cpp\
    Tables/ThreadBpm.cpp\
    Tables/Twiss.cpp\
    Tables/Twiss3.cpp\
    Track/Track.cpp\
    Track/TrackCmd.cpp\
    Track/TrackEnd.cpp\
    Track/TrackParser.cpp\
    Track/TrackRun.cpp\
    Track/TrackSave.cpp\
    Track/TrackStart.cpp\
    Utilities/OpalException.cpp\
    Utilities/OpalFilter.cpp\
    Utilities/NumToStr.cpp\
    Utilities/RegularExpression.cpp\
    Utilities/Round.cpp\
    Utilities/Timer.cpp\
    Utilities/TpsWerrf.cpp\
    Utilities/Truncate.cpp\
    Utilities/OpalSection.cpp\
    Utilities/OpalField.cpp\
    ValueDefinitions/BoolConstant.cpp\
    ValueDefinitions/RealConstant.cpp\
    ValueDefinitions/RealVariable.cpp\
    ValueDefinitions/RealVector.cpp\
    ValueDefinitions/StringConstant.cpp\
    Main.cpp
